# notion_mcp

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
